# agora-terminal

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: Dockerfile  main.py
api/routes/: crypto.py  equity.py  macro.py
dashboard/src/modules/market_overview/: index.html
docs/runbooks/: local-setup.md
infra/docker/: docker-compose.yml
infra/docker/postgres/: init.sql
ingestion/: polygon_batch.py
ingestion/producers/binance/: config.py  producer.py  schemas.py
processing/bytewax/: Dockerfile
processing/bytewax/jobs/: ohlcv_processor.py
scripts/: verify_stack.py
storage/iceberg/: Dockerfile  bronze_writer.py
transform/dbt/: .user.yml  Dockerfile  agora.duckdb  profiles.yml
transform/dbt/agora/: dbt_project.yml
transform/dbt/agora/models/silver/: silver_equity_ohlcv_daily.sql
