[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agora-terminal"
version = "0.1.0"
description = "Open source financial intelligence platform"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

dependencies = [
    "confluent-kafka>=2.3",
    "fastavro>=1.9",
    "pyiceberg>=0.6",
    "duckdb>=0.10",
    "boto3>=1.34",
    "bytewax>=0.19",
    "dbt-core>=1.7",
    "dbt-duckdb>=1.7",
    "dagster>=1.6",
    "dagster-webserver>=1.6",
    "dagster-postgres>=0.22",
    "great-expectations>=0.18",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12",
    "httpx>=0.27",
    "alpaca-py>=0.20",
    "polygon-api-client>=1.13",
    "fredapi>=0.5",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pendulum>=3.0",
    "structlog>=24.1",
    "tenacity>=8.2",
    "questdb>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.3",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "ipython>=8",
]

ai = [
    "langchain>=0.1",
    "langchain-community>=0.0.20",
    "chromadb>=0.4",
    "llama-index>=0.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "ingestion", "processing"]
